src/test/deca/context/valid/created/object_decl4.deca
//Description :
// Vérification de la déclaration de méthode
//
// Resultats :
//


class Test {

    int x = 0;

    void setX(int x){
    this.x = x;
    }

    void affiche() {
        print("Yo : ", this.x);
    }
}

{
Test object_test = new Test();
int a = 3;
object_test.setX(a);
}
